k8s/mett-app/overlays/production/celery-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mett-dataportal-celery-worker
  namespace: mett-dataportal-hl-dev
  labels:
    app: mett-dataportal-celery-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mett-dataportal-celery-worker
  template:
    metadata:
      labels:
        app: mett-dataportal-celery-worker
    spec:
      securityContext:
        runAsUser: 7123
        runAsGroup: 1347
      containers:
        - name: celery-worker
          image: quay.io/microbiome-informatics/mett-dataportal-api:v0.0.145
          volumeMounts:
            - name: faa-data
              mountPath: /data/faa
          resources:
            requests:
              cpu: "2"
              memory: "13Gi"
            limits:
              cpu: "2"
              memory: "16Gi"
          command: ["/bin/sh"]
          args:
            - -c
            - celery -A hmmerapi worker -l DEBUG -Q downloads_queue --concurrency=4 --max-tasks-per-child=10
      imagePullSecrets:
        - name: quay-pull-secret
      volumes:
        - name: faa-data
          persistentVolumeClaim:
            claimName: mett-faa-pvc
