k8s/mett-app/overlays/production/mett-celery-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mett-celery-beat-prod
  namespace: mett-dataportal-hl
  labels:
    app: mett-celery-beat-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mett-celery-beat-prod
  template:
    metadata:
      labels:
        app: mett-celery-beat-prod
    spec:
      securityContext:
        runAsUser: 7123
        runAsGroup: 1347
      containers:
        - name: celery-beat
          image: dockerhub.ebi.ac.uk/microbiome-informatics/containers/mett-dataportal-api
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          command: ["celery"]
          args: [
            "-A", "dataportal", "beat",
            "-l", "INFO",
            "--scheduler", "django_celery_beat.schedulers:DatabaseScheduler"
          ]
      imagePullSecrets:
        - name: containers-pull-secret
