k8s/mett-app/overlays/production/mett-celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mett-celery-worker-prod
  namespace: mett-dataportal-hl
  labels:
    app: mett-celery-worker-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mett-celery-worker-prod
  template:
    metadata:
      labels:
        app: mett-celery-worker-prod
    spec:
      securityContext:
        runAsUser: 7123
        runAsGroup: 1347
      volumes:
        - name: pyhmmer-data
          persistentVolumeClaim:
            claimName: mett-pyhmmer-pvc-prod
      containers:
        - name: mett-celery-worker-prod
          image: dockerhub.ebi.ac.uk/microbiome-informatics/containers/mett-dataportal-api
          volumeMounts:
            - name: pyhmmer-data
              mountPath: /data/pyhmmer
          resources:
            requests:
              cpu: "2"
              memory: "12Gi"
            limits:
              cpu: "2"
              memory: "16Gi"
          command: [ "celery" ]
          args: [
            "-A", "dataportal", "worker",
            "-l", "INFO",
            "-Q", "pyhmmer_queue",
            "--concurrency=2",
            "--max-tasks-per-child=10"
          ]
      imagePullSecrets:
        - name: containers-pull-secret
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: mett-pyhmmer-data
#                    operator: In
#                    values:
#                      - "true"
