k8s/mett-app/overlays/production/mett-dataportal-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mett-dataportal-api-prod
  namespace: mett-dataportal-hl
  labels:
    app: mett-dataportal-api-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mett-dataportal-api-prod
  template:
    metadata:
      labels:
        app: mett-dataportal-api-prod
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
    spec:
      securityContext:
        runAsUser: 7123
        runAsGroup: 1347
      volumes:
        - name: pyhmmer-data
          persistentVolumeClaim:
            claimName: mett-pyhmmer-pvc-prod
      containers:
        - image: dockerhub.ebi.ac.uk/microbiome-informatics/containers/mett-dataportal-api
          imagePullPolicy: Always
          name: mett-dataportal-api-prod
          command: ["python"]
          args: ["manage.py", "runserver", "0.0.0.0:8000"]
          resources:
            requests:
              memory: "4Gi"
              cpu: "1"
            limits:
              memory: "8Gi"
              cpu: "2"
          volumeMounts:
            - name: pyhmmer-data
              mountPath: /data/pyhmmer
          ports:
            - containerPort: 8000
              name: gunicorn
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8000
              scheme: HTTP
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            initialDelaySeconds: 20
            periodSeconds: 300
            successThreshold: 1
            failureThreshold: 3
      imagePullSecrets:
        - name: containers-pull-secret

---

apiVersion: v1
kind: Service
metadata:
  name: mett-dataportal-api-prod-svc
  namespace: mett-dataportal-hl
  labels:
    app: mett-dataportal-api-prod
spec:
  type: NodePort
  selector:
    app: mett-dataportal-api-prod
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 31025
