k8s/mett-app/overlays/production/mett-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mett-redis-prod
  namespace: mett-dataportal-hl
  labels:
    app: mett-redis-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mett-redis-prod
  template:
    metadata:
      labels:
        app: mett-redis-prod
    spec:
      containers:
        - name: redis
          image: quay.io/microbiome-informatics/redis:7.4
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "750m"
              memory: "2Gi"
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 60
            periodSeconds: 60
          startupProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: mett-redis-prod
  namespace: mett-dataportal-hl
  labels:
    app: mett-redis-prod
spec:
  type: NodePort
  selector:
    app: mett-redis-prod
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 31679
