k8s/mett-app/overlays/production/mett-dataportal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gutmicrobes-hl-ingress-dev
  namespace: mett-dataportal-hl-dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: www.gut-microbes.org
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: mett-dataportal-api-svc-dev
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mett-dataportal-react-app-svc-dev
            port:
              number: 80
